# mediatoanki

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  mediatoanki.py  pyproject.toml  requirements.txt
mediatoanki/: AnkiDeckGenerator.py  MediaToAnkiArgParser.py  SubtitleAudioCutter.py  SubtitleFrameExtractor.py  SubtitleParser.py  app.py
mediatoanki/deck/: DeckGenerator.py
mediatoanki/deck/anki/: AnkiDeckGenerator.py
mediatoanki/deck/flashcard/: FlashCardTemplate.py
mediatoanki/extractors/: ExtractorContract.py
mediatoanki/extractors/audio/: AudiosExtractor.py
mediatoanki/extractors/frame/: FramesExtractor.py
mediatoanki/model/: MediaToAnkiTemplate.py  Subtitle.py
mediatoanki/model/anki/: FlashCardBack.py  FlashCardCSS.py  FlashCardFieldsContent.py  FlashCardFront.py
mediatoanki/model/entities/: Audio.py  (+4 more)
mediatoanki/parsers/: SubtitleParserAdapter.py
mediatoanki/utils/: AnkiUtils.py  CopyUtils.py  FileUtils.py  SubtitleParserUtils.py  TimeUtils.py
src/: AnkiDeckGenerator.py  MediaToAnkiArgParser.py  SubtitleAudioCutter.py  SubtitleFrameExtractor.py  SubtitleParser.py
src/model/: MediaToAnkiTemplate.py  Subtitle.py
src/utils/: CopyUtils.py  TimeUtils.py  VideoPathUtils.py
tests/: test_copyutils.py  test_subtitleparser.py  test_timeutils.py
tests/deck/: test_anki_deck_generator.py
tests/extractors/: test_audios_extractor.py  test_frames_extractor.py
tests/parsers/: test_srt_subtitle_parser.py  test_vtt_subtitle_parser.py
tests/utils/: test_copyutils.py  test_file_utils.py  test_subtitle_parser_utils.py  test_timeutils.py
(+19 files in other folders)
