[tool.poetry]
name = "mediatoanki"
version = "0.1.0"
description = "Cria decks para o anki a partir de vídeo e legenda."
authors = ["Pedro Bicudo <pedrobicudoa@gmail.com>"]

[tool.poetry.scripts]
mediatoanki="mediatoanki:start"

[tool.poetry.dependencies]
python = "^3.7"
genanki = "^0.13.0"
moviepy = "^1.0.3"
typing-extensions = "^4.2.0" # Fix https://github.com/numpy/numpy/issues/19521

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
